# ot-harjoitustyo

./: README.md  kayttoohje.md  pyproject.toml  tasks.py
dokumentaatio/: arkkitehtuuri.md  changelog.md  kayttoohje.md  tuntikirjanpito.md  vaatimusmaarittely.md
laskarit/viikko 3/: tehtävä 1.md
laskarit/viikko1/: gitlog.txt  komentorivi.txt
laskarit/viikko2/maksukortti/: pyproject.toml
laskarit/viikko2/maksukortti/src/tests/: maksukortti_test.py
laskarit/viikko2/unicafe/src/tests/: kassapaate_test.py  maksukortti_test.py
laskarit/viikko3/: tehtävä 1.md  tehtävä 2.md  tehtävä 3.md  tehtävä 4.md
src/: evaluator.py  index.py  row.py  ui.py
src/calculation/: evaluator.py  fixed_point.py  floating_point.py
src/tests/: evaluator_test.py  fixed_point_test.py
src/ui/: column.py  column_settings.py  fixed_point_settings.py  fixed_point_settings_view.py  floating_point_settings.py  floating_point_settings_view.py  row.py  settings_window.py  table.py  ui.py
